[package]
name = "node-stats-service"
version = "0.1.0"
authors = ["peaceman <nixalio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.3", features = ["transport", "tls"] }
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "fs"] }
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
rand = "0.7"
anyhow = "1.0"
humantime-serde = "1.0.0"

[build-dependencies]
tonic-build = "0.3"
